--- a/app/views/products/my_product.html.erb
+++ b/app/views/products/my_product.html.erb
@@ -4,11 +4,17 @@
 <p><%= product.name%></p>
 <p><%= product.description%></p>
 <p><%= product.amount%></p>
+<% if   @requests.any? {|request| request.product_id == product.id && request.status == "pending"}%>
+<%= link_to "View request", product_requests_path(product.id)%>
+<%else%>
 <%= link_to "Edit", edit_product_path(product.id)%>
+ <%= link_to "Delete", product_path(product.id), data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this product?" } %>
+<%end%>
 
-    <%= link_to "Delete", product_path(product.id), data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this product?" } %>
 <%end%>
 <br>
 <%= link_to "Add product",new_product_path%>
+<br>
+
 <br>
 <%= link_to "Go back",products_path%>
