--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,4 +1,7 @@
 
+
+<div class="add_product">
+
 <h1>Add your product</h1>
 
 <%= form_with model: @product do |f|%>
@@ -20,3 +23,5 @@
 </div>
 
 <%end%>
+
+</div>
