--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,4 +1,7 @@
-<h1>Request for the product</h1>
+
+
+<div class="request_form">
+    <h1>Request for the product</h1>
 <p>Product :<%= @product.name%></p>
 <p>Description :<%= @product.description%></p>
 <p>Actual amount :<%= @product.amount%></p>
@@ -10,4 +13,6 @@
 <%= f.submit "Request"%>
 
 <%end%>
+
+</div>
 
