--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,10 @@
-<h1>Welcome to Deal Zone</h1>
-<%= link_to "Sign up",new_signup_path%>
-<%= link_to "Log In",new_login_path %>
+
+
+    <div class="header_div">
+ <h1 class="home_heading">Welcome to Deal Zone</h1>
+ <button><%= link_to "Sign up",new_signup_path%></button>
+ <button><%= link_to "Log In",new_login_path %></button>
+
+
+
+</div>
