--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,12 +20,14 @@
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+
+    
   </head>
 
   <body>
    
     <% flash.each do |key, value| %>
-      <div class="flash <%= key %>">
+      <div class="flash" <%= key %> >
         <%= value %>
       </div>
     <% end %>
