--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,36 +1,29 @@
-
-
-
 <div>
     <h1>Products</h1>
-    <button> <%= link_to "Logout", "logout",method: "get" %></button>
+    <button><%= link_to "Logout", "logout", method: "get" %></button>
     <button><%= link_to "My Products", my_product_products_path %></button>
 
-
-<% if @products.any?%>
-<div class="product-grid">
-<%@products.each do |product|%>
-<div class="product-card">
-<p>Product name: <%= product.name%></p>
-<p>Product description: <%= product.description%></p>
-<p>Product Amount: <%= product.amount%></p>
- <% if @requests.any? { |request| request.product_id == product.id && request.user_id == current_user_id && request.status == "pending" } %>
-    <p>Status: Pending</p>
-  <% else %>
-    <%= link_to "Request", new_product_request_path(product.id) %>
-  <% end %>
-  </div>
-
-<%end%>
-  </div>
-
-<%else%>
-<p>No products</p>
-
-<%end%>
-
+    <% if @products.any? %>
+        <div class="product-grid">
+            <% @products.each do |product| %>
+                <% user_requests = @requests.select { |request| request.product_id == product.id && request.user_id == current_user_id } %>
+                <% if user_requests.empty? || !user_requests.any? { |request| request.status == "accepted" } %>
+                    <div class="product-card">
+                        <p>Product name: <%= product.name %></p>
+                        <p>Product description: <%= product.description %></p>
+                        <p>Product Amount: <%= product.amount %></p>
+                        
+                        <% pending_request = user_requests.find { |request| request.status == "pending" } %>
+                        <% if pending_request %>
+                            <p>Status: Pending</p>
+                        <% else %>
+                            <%= link_to "Request", new_product_request_path(product.id) %>
+                        <% end %>
+                    </div>
+                <% end %>
+            <% end %>
+        </div>
+    <% else %>
+        <p>No products</p>
+    <% end %>
 </div>
-
-
-
-
