--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -57,4 +57,19 @@ body{
     color: green;
   }
 
+  .request-count {
+    display: inline-block;
+    margin-left: 5px;
+    background-color: red;
+    color: white;
+    font-size: 0.8em;
+    font-weight: bold;
+    border-radius: 50%;
+    width: 18px;
+    height: 18px;
+    text-align: center;
+    line-height: 18px;
+  }
+  
+
 
