--- a/app/views/login/new.html.erb
+++ b/app/views/login/new.html.erb
@@ -1,16 +1,16 @@
 
 <div class="login">
     <h1>Login</h1>
-<%= form_with url:"/login" ,method:"post",local:true do |f|%>
+<%= form_with url:"/login" ,method:"post" do |f|%>
 <div>
     <%= f.label :email, "Email"%>
     <br>
-    <%= f.text_field :email, placeholder:"Enter your email",required:true%>
+    <%= f.text_field :email, placeholder:"Enter your email", required:true%>
 </div>
 <div>
     <%= f.label :password, "Password"%>
     <br>
-    <%= f.text_field :password, placeholder:"Enter your password",required:true%>
+    <%= f.text_field :password, placeholder:"Enter your password", required:true%>
 </div>
 <button><%=f.submit "login"%></button>
 
