--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -3,7 +3,7 @@
 <div>
     <h1>Requested Products</h1>
     <div class="product-grid">
-        <div class="product-card">
+        <div class="product-card">w
  <p>Product name: <%=@request.product.name%></p>
  <p>Actual Amount: <%=@request.product.amount%></p>
  <p>Requested Amount: <%=@request.request_amount%></p>
