--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,8 +2,8 @@
 
     <div class="header_div">
  <h1 class="home_heading">Welcome to Deal Zone</h1>
- <button><%= link_to "Sign up",new_signup_path%></button>
- <button><%= link_to "Log In",new_login_path %></button>
+ <button><%= link_to "Sign up",new_user_registration_path%></button>
+ <button><%= link_to "Log In",new_user_session_path %></button>
 
 
 
