--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,11 +26,15 @@
 
   <body>
    
-    <% flash.each do |key, value| %>
-      <div class="flash" <%= key %> >
-        <%= value %>
-      </div>
-    <% end %>
+
+     <p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
+
+      <% if user_signed_in? %>
+<%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete}%>
+
+ <%end%>
+
 
   
 
