feat:model correction done

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,9 +27,14 @@ body{
     cursor: pointer;
   }
 
-  .flash{
-    color: brown;
+  .alert{
+    color: red;
     text-align: center;
+  }
+  .notice{
+    color: green;
+    text-align: center;
+
   }
 
   .product-grid {
