--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,8 @@
        <p class="alert"><%= alert %></p>
 
       <% if user_signed_in? %>
-<%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete}%>
+      <button><%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to logout"}%>  </button>
+
 
  <%end%>
 
