--- a/app/views/products/my_product.html.erb
+++ b/app/views/products/my_product.html.erb
@@ -17,20 +17,19 @@
            
           <% if (pending_request = product_requests.find { |request| request.status == "pending" }) %>
         
-            <%= link_to "View Requests", product_requests_path(pending_request)%>
+            <%= link_to "View Requests", product_requests_path(product.id)%>
                <span class="request-count"><%= product_requests.count { |request| request.status == "pending" } %></span>
             <br>
-            <button disabled class="button">Edit</button>
-            <button disabled class="button">Delete</button>
+            <button disabled >Edit</button>
+            <button disabled >Delete</button>
           
           <% elsif product_requests.any? { |request| request.status == "accepted" } %>
             <p class="order_accepted">Order accepted</p>
           
           <% else %>
-            <%= link_to "Edit", edit_product_path(product.id), class: "button" %>
+            <%= link_to "Edit", edit_product_path(product.id) %>
             <%= link_to "Delete", product_path(product.id), 
-                        data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this product?" },
-                        class: "button" %>
+                        data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this product?" } %>
           <% end %>
         </div>
       <% end %>
