--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,18 +1,32 @@
-
-
 <div>
-    <h1>Requested Products</h1>
-    <div class="product-grid">
-        <div class="product-card">
- <p>Product name: <%=@request.product.name%></p>
- <p>Actual Amount: <%=@request.product.amount%></p>
- <p>Requested Amount: <%=@request.request_amount%></p>
- <p>Requested by: <%=@request.user.name%></p>
-  
-    
- <button> <%= link_to "Accept", product_request_path(@request.product.id, @request.id, commit: "Accepted"), data: { turbo_method: :patch,turbo_confirm: "Are you sure you want to accept this request?" } %></button>
- <button><%= link_to "Reject", product_request_path(@request.product.id, @request.id, commit: "Rejected"), data: { turbo_method: :patch,turbo_confirm: "Are you sure you want to accept this request?" } %></button>
-       </div>
-       </div>
+  <h1>Requested Products</h1>
+  <div class="product-grid">
+  <% if @requests.any? %>
+    <% @requests.each do |request| %>
+      <div class="product-card">
+        <p>Product name: <%= request.product.name %></p>
+        <p>Actual Amount: <%= request.product.amount %></p>
 
+      
+          <p>Requested Amount: <%= request.request_amount %></p>
+          
+          <p>Requested by: <%= request.user.name %></p>
+
+       
+          <button>
+            <%= link_to "Accept", product_request_path(request.product_id, request.id, commit: "Accepted"), 
+                        data: { turbo_method: :patch, turbo_confirm: "Are you sure you want to accept this request?" } %>
+          </button>
+          <button>
+            <%= link_to "Reject", product_request_path(request.product_id, request.id, commit: "Rejected"), 
+                        data: { turbo_method: :patch, turbo_confirm: "Are you sure you want to reject this request?" } %>
+          </button>
+     
+      </div>
+    <% end %>
+  <% else %>
+  <p>No requested products </p>
+  <%end%>
+  
+  </div>
 </div>
