--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,29 +1,29 @@
 <div>
   <h1>Requested Products</h1>
   <div class="product-grid">
-  <% if @requests.any? %>
-    <% @requests.each do |request| %>
+  <% if @request && @request.product.user_id == current_user_id %>
+   
       <div class="product-card">
-        <p>Product name: <%= request.product.name %></p>
-        <p>Actual Amount: <%= request.product.amount %></p>
+        <p>Product name: <%= @request.product.name %></p>
+        <p>Actual Amount: <%= @request.product.amount %></p>
 
       
-          <p>Requested Amount: <%= request.request_amount %></p>
+          <p>Requested Amount: <%= @request.request_amount %></p>
           
-          <p>Requested by: <%= request.user.name %></p>
+          <p>Requested by: <%= @request.user.name %></p>
 
        
           <button>
-            <%= link_to "Accept", product_request_path(request.product_id, request.id, commit: "Accepted"), 
+            <%= link_to "Accept", product_request_path(@request.product_id, @request.id, commit: "Accepted"), 
                         data: { turbo_method: :patch, turbo_confirm: "Are you sure you want to accept this request?" } %>
           </button>
           <button>
-            <%= link_to "Reject", product_request_path(request.product_id, request.id, commit: "Rejected"), 
+            <%= link_to "Reject", product_request_path(@request.product_id, @request.id, commit: "Rejected"), 
                         data: { turbo_method: :patch, turbo_confirm: "Are you sure you want to reject this request?" } %>
           </button>
      
       </div>
-    <% end %>
+   
   <% else %>
   <p>No requested products </p>
   <%end%>
